<resources>
    <string name="app_name">Mini Weather</string>
    <string name="notification_title">Title</string>
    <string name="notification_text">Some text</string>
    <string name="notification_ticker" />
    <string name="stop">Stop</string>
    <string name="play">Play</string>
    <string name="unknown_location">Unknown Location</string>
    <string name="activate_weather_notification_icon">Activate Weather Notification Icon</string>
    <string name="main_activity_explanation"><b>MiniWeather</b> will show you a StatusBar animated icon of the current weather state, based on your location.\nThe current temperature will be shown in the Notification.\nThank you for installing this app. Have fun!</string>
    <string name="key_register_for_updates">register_for_updates</string>
    <string name="un_Reg_locations">UnReg Locations</string>
    <string name="Reg_locations">Reg Locations</string>
    <string name="sp_key_units_format">degrees_unit</string>
    <string name="sp_key_time_format">time_format</string>
    <string name="pref_ismiui">isMiui</string>
    <string name="settings">settings</string>

    <plurals name="num_locations_reported">
        <item quantity="zero">No location reported</item>
        <item quantity="one">One location reported</item>
        <item quantity="other">%d locations reported</item>
    </plurals>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_degrees_unit">Degrees unit</string>
    <string-array name="pref_degrees_unit_titles">
        <item>Celsius</item>
        <item>Fahrenheit</item>
        <item>kelvin</item>
    </string-array>
    <string-array name="pref_degrees_unit_values">
        <item>Metric</item>
        <item>Imperial</item>
        <item>Default</item>
    </string-array>

    <string name="pref_title_time_format">Time format</string>
    <string-array name="pref_time_format_titles">
        <item>12 Hours</item>
        <item>24 Hours</item>
    </string-array>
    <string-array name="pref_time_format_values">
        <item>12_hours</item>
        <item>24_hours</item>
    </string-array>



    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="turn_on_location_message">Please turn on the device\'pattern Location for the app know where your are</string>
    <string name="pref_key_send_feedback">send feedback</string>
    <string name="pref_title_refresh_interval">Refresh Interval</string>
    <string name="sp_key_refresh_interval">refresh interval</string>
    <string name="number_picker_default_value">30</string>
    <string name="pref_key_write_log">write log</string>
    <string name="pref_title_write_log">Write to log</string>

</resources>
