<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference'pattern summary should be set to its value by the activity code. -->
    <ListPreference
        android:defaultValue="Metric"

        android:entries="@array/pref_degrees_unit_titles"
        android:entryValues="@array/pref_degrees_unit_values"
        android:key="@string/sp_key_units_format"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_degrees_unit" />

    <ListPreference
        android:entries="@array/pref_time_format_titles"
        android:entryValues="@array/pref_time_format_values"
        android:key="@string/sp_key_time_format"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_time_format" />

    <com.yoavgibri.miniweather.views.NumberPickerPreference
        android:key="@string/sp_key_refresh_interval"
        android:title="@string/pref_title_refresh_interval"
        android:defaultValue="@integer/number_picker_default_value"
        />

    <Preference
        android:key="@string/pref_key_send_feedback"
        android:title="Let me know what you think" />

    <SwitchPreference
        android:key="@string/pref_key_write_log"
        android:title="@string/pref_title_write_log"
        />


    <!-- This preference simply launches an intent when selected. Use this UI sparingly, per
         design guidelines. -->
    <!--<Preference android:title="@string/pref_title_system_sync_settings">-->
    <!--<intent android:action="android.settings.SYNC_SETTINGS" />-->
    <!--</Preference>-->

</PreferenceScreen>
